@@ -1,3 +1,8 @@
+2009-06-05  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Linker.Steps/ResolveFromXmlStep.cs: give us more
+	possibilities to detail the xml descriptors.
+
 2009-06-04  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Linker.Steps/ResolveFromXmlStep.cs: fix handling
